优化网络请求和文件服务的URL处理
统一网络请求和文件服务中的URL处理方式，使用URI转URL的方法确保URL正确构建。优化了HttpClientUtil、HttpUtils和ImageUtils等类中URL的创建方式，通过URI处理避免潜在的格式错误。在MinioFileService中移除了未使用的Md5Utils依赖。